[package]
name = "app-data"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { workspace = true, features = ["serde"] }
anyhow = { workspace = true }
bytes-hex = { workspace = true }
const-hex = { workspace = true }
number = { path = "../number" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }

[dev-dependencies]
hex-literal = { workspace = true }

[features]
test_helpers = []

[lints]
workspace = true
