[package]
name = "autopilot"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "autopilot"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "autopilot"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
approx = "0.5"
async-trait = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
contracts = { path = "../contracts" }
database = { path = "../database" }
ethcontract = { workspace = true }
futures = { workspace = true }
gas-estimation = { workspace = true }
global-metrics = { path = "../global-metrics" }
hex-literal = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
model = { path = "../model" }
number-conversions = { path = "../number-conversions" }
primitive-types = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
shared = { path = "../shared" }
sqlx = { workspace = true }
strum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tracing = { workspace = true }
url = { workspace = true }
web3 = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
testlib = { path = "../testlib" }
tokio = { workspace = true, features = ["test-util"] }
