[package]
name = "autopilot"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "autopilot"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "autopilot"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true, features = ["rand", "provider-debug-api", "provider-trace-api"] }
app-data = { workspace = true }
axum = { workspace = true }
bytes-hex = { workspace = true } # may get marked as unused but it's used with serde
anyhow = { workspace = true }
async-trait = { workspace = true }
bigdecimal = { workspace = true }
chain = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
contracts = { workspace = true }
cow-amm = { workspace = true }
dashmap = { workspace = true }
database = { workspace = true }
derive_more = { workspace = true }
ethrpc = { workspace = true }
futures = { workspace = true }
hyper = { workspace = true }
observe = { workspace = true }
const-hex = { workspace = true }
hex-literal = { workspace = true }
humantime = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
mimalloc = { workspace = true, optional = true }
model = { workspace = true }
num = { workspace = true }
number = { workspace = true }
order-validation = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json"] }
rust_decimal = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tikv-jemallocator = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
winner-selection = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
mockall = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
shared = { workspace = true, features = ["test-util"] }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true, features = ["git", "gitcl"] }

[lints]
workspace = true

[features]
mimalloc-allocator = ["dep:mimalloc"]
tokio-console = ["observe/tokio-console"]
