[package]
name = "autopilot"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
doctest = false
name = "autopilot"
path = "src/lib.rs"

[[bin]]
name = "autopilot"
path = "src/main.rs"

[dependencies]
account-balances = { workspace = true }
alloy = { workspace = true, features = ["provider-debug-api", "provider-trace-api", "rand", "signer-aws"] }
anyhow = { workspace = true }
app-data = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bad-tokens = { workspace = true }
bigdecimal = { workspace = true }
brotli = { workspace = true }
bytes = { workspace = true }
bytes-hex = { workspace = true }  # may get marked as unused but it's used with serde
chain = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
configs = { workspace = true }
const-hex = { workspace = true }
contracts = { workspace = true }
cow-amm = { workspace = true }
dashmap = { workspace = true }
database = { workspace = true }
derive_more = { workspace = true }
ethrpc = { workspace = true }
event-indexing = { workspace = true }
futures = { workspace = true }
gas-price-estimation = { workspace = true }
hex-literal = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
indexmap = { workspace = true }
itertools = { workspace = true }
mimalloc = { workspace = true, optional = true }
model = { workspace = true }
num = { workspace = true }
number = { workspace = true }
observe = { workspace = true }
order-validation = { workspace = true }
price-estimation = { workspace = true, features = ["test-util"] }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["gzip", "json", "stream"] }
rust_decimal = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
token-info = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = { workspace = true }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["trace"] }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }
winner-selection = { workspace = true }

[dev-dependencies]
configs = { workspace = true, features = ["test-util"] }
maplit = { workspace = true }
mockall = { workspace = true }
shared = { workspace = true, features = ["test-util"] }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true, features = ["git", "gitcl"] }

[features]
mimalloc-allocator = ["dep:mimalloc"]
test-util = ["configs/test-util", "dep:tempfile", "price-estimation/test-util"]
tokio-console = ["observe/tokio-console"]

[lints]
workspace = true
