[package]
name = "bytes-hex"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_with = { workspace = true }
const-hex = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true
