[package]
name = "code-fetching"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
async-trait = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
anyhow = { workspace = true }
cached = { workspace = true }
ethrpc = { workspace = true }
mockall = { workspace = true, optional = true }
tracing = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
testlib = { workspace = true }
tokio = { workspace = true }

[features]
test-util = ["dep:mockall"]