[package]
name = "configs"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
serde_json = { workspace = true }

[features]
test-util = []

[lints]
workspace = true
