[package]
name = "configs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["signer-aws"] }
anyhow = { workspace = true }
chrono = { workspace = true }
humantime-serde = { workspace = true }
price-estimation = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
price-estimation = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
test-util = ["dep:tempfile", "price-estimation/test-util"]

[lints]
workspace = true
