[package]
name = "configs"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { workspace = true, features = ["signer-aws"] }
anyhow = { workspace = true }
bigdecimal = { workspace = true, features = ["serde"] }
chrono = { workspace = true, features = ["serde"] }
humantime-serde = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true, features = ["serde"] }

[dev-dependencies]
rate-limit = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
tempfile = { workspace = true }

[features]
test-util = ["dep:tempfile", "rate-limit/test-util"]

[lints]
workspace = true
