[package]
name = "contracts-generate"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = {workspace = true}
forge-sol-macro-gen = {workspace = true}

alloy-json-abi = {workspace = true}
alloy-dyn-abi = {workspace = true}
# alloy = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
prettyplease = {workspace = true}
eyre = {workspace = true}
proc-macro2 = {workspace = true}
alloy-sol-macro-input = {workspace = true}
alloy-sol-macro-expander = {workspace = true}

[lints]
workspace = true
