[package]
name = "contracts-generate"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
alloy-sol-macro-expander = {workspace = true}
alloy-sol-macro-input = {workspace = true, features = ["json"]}
prettyplease = {workspace = true}
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
walkdir = {workspace = true}

[lints]
workspace = true
