[package]
name = "contracts"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "vendor"
required-features = ["bin"]

[features]
default = []
bin = [
    "tracing",
    "tracing-subscriber",
    "reqwest"
]

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true, features = ["sol-types", "json", "contract", "json-abi"] }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# [bin-dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"], optional = true }
reqwest = { workspace = true, optional = true, features = ["blocking", "json"] }

[build-dependencies]
anyhow = { workspace = true }
alloy-sol-macro-expander = {workspace = true}
alloy-sol-macro-input = {workspace = true, features = ["json"]}
prettyplease = {workspace = true}
proc-macro2 = {workspace = true}
quote = {workspace = true}
syn = {workspace = true}
walkdir = {workspace = true}

[lints]
workspace = true
