[package]
name = "contracts"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[lib]
doctest = false

[[bin]]
name = "vendor"
required-features = ["bin"]

[dependencies]
alloy = { workspace = true, features = ["contract", "json", "json-abi", "sol-types"] }
anyhow = { workspace = true }
paste = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true, features = ["blocking", "json"], optional = true }
# [bin-dependencies]
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt"], optional = true }

[build-dependencies]
alloy-sol-macro-expander = { workspace = true }
alloy-sol-macro-input = { workspace = true, features = ["json"] }
anyhow = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true }

[features]
default = []
bin = ["reqwest", "tracing", "tracing-subscriber"]

[lints]
workspace = true
