[package]
name = "cow-amm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
app-data = { workspace = true }
async-trait = { workspace = true }
contracts = { workspace = true }
ethcontract = { workspace = true }
ethrpc = { workspace = true }
model = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true, features = [] }
tracing = { workspace = true }
const-hex = { workspace = true }
hex-literal = { workspace = true }

[lints]
workspace = true
