[package]
name = "cow-amm"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
alloy = { workspace = true }
app-data = { workspace = true }
async-trait = { workspace = true }
contracts = { workspace = true }
database = { workspace = true }
ethrpc = { workspace = true }
futures = { workspace = true }
model = { workspace = true }
observe = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
shared = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = [] }
tracing = { workspace = true }
const-hex = { workspace = true }

[lints]
workspace = true
