[package]
name = "cow-amm"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-contract = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
app-data = { workspace = true }
async-trait = { workspace = true }
const-hex = { workspace = true }
contracts = { workspace = true }
database = { workspace = true }
ethrpc = { workspace = true }
event-indexing = { workspace = true }
futures = { workspace = true }
model = { workspace = true }
observe = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
signature-validator = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true, features = [] }
tracing = { workspace = true }

[lints]
workspace = true
