[package]
name = "database"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
const_format = "0.2.32"
futures = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
hex-literal = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
