[package]
name = "database"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["clock"] }
const_format = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
strum = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
tokio = { workspace = true, features = ["macros"] }

[lints]
workspace = true
