[package]
name = "driver"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "GPL-3.0-or-later"

[lib]
name = "driver"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
app-data = { path = "../app-data" }
bytes-hex = { path = "../bytes-hex" }
chain = { path = "../chain" }
s3 = { path = "../s3" }
async-trait = { workspace = true }
axum = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true, features = ["clock"], default-features = false }
cow-amm = { path = "../cow-amm" }
database = { path = "../database" }
derive_more = { workspace = true }
ethabi = "18.0"
ethereum-types = { workspace = true }
ethrpc = { path = "../ethrpc" }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
lazy_static = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
mimalloc = { workspace = true }
num = { workspace = true }
number = { path = "../number" }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
tap = "1.0.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
tower = "0.4"
tower-http = { version = "0.4", features = ["limit", "trace"] }
url = { workspace = true, features = ["serde"] }
web3 = { workspace = true, features = ["http"] }

# These still use { workspace = true } because they're used at
# the boundary between driver and shared.
primitive-types = { workspace = true }
secp256k1 = { workspace = true }

# TODO These either need to be removed or changed to be direct
# dependencies rather than workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
contracts = { path = "../contracts" }
ethcontract = { workspace = true }
gas-estimation = { workspace = true }
model = { path = "../model" }
observe = { path = "../observe" }
shared = { path = "../shared" }
solver = { path = "../solver" }
tracing = { workspace = true }
warp = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
mockall = { workspace = true }
solvers-dto = { path = "../solvers-dto" }
tokio = { workspace = true, features = ["test-util", "process"] }
tempfile = { workspace = true }

[lints]
workspace = true
