[package]
name = "driver"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "driver"
path = "src/lib.rs"
doctest = false

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
alloy = { workspace = true, features = ["sol-types", "provider-txpool-api", "rand", "provider-anvil-api", "json-rpc", "rpc-types"] }
app-data = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bigdecimal = { workspace = true }
bytes-hex = { workspace = true } # may get marked as unused but it's used with serde
chain = { workspace = true }
chrono = { workspace = true, features = ["clock"], default-features = false }
cow-amm = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
ethrpc = { workspace = true }
futures = { workspace = true }
const-hex = { workspace = true }
hex-literal = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true }
moka = { workspace = true, features = ["future"] }
num = { workspace = true }
number = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
s3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true }
solvers-dto = { path = "../solvers-dto" }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["limit", "trace"] }
url = { workspace = true, features = ["serde"] }
web3 = { workspace = true, features = ["http"] }

# These still use { workspace = true } because they're used at
# the boundary between driver and shared.
secp256k1 = { workspace = true }

# TODO These either need to be removed or changed to be direct
# dependencies rather than workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
contracts = { workspace = true }
ethcontract = { workspace = true }
model = { workspace = true }
observe = { workspace = true, features = ["axum-tracing"] }
shared = { workspace = true }
solver = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
app-data = { workspace = true, features = ["test_helpers"] }
maplit = { workspace = true }
tokio = { workspace = true, features = ["test-util", "process"] }
tempfile = { workspace = true }
ethrpc = { workspace = true, features = ["test-util"] }
contracts = { workspace = true }
alloy = { workspace = true, features = ["signer-mnemonic"] }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true, features = ["git", "gitcl"] }

[lints]
workspace = true

[features]
mimalloc-allocator = ["dep:mimalloc"]
tokio-console = ["observe/tokio-console"]
