[package]
name = "driver"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
doctest = false
name = "driver"
path = "src/lib.rs"

[[bin]]
name = "driver"
path = "src/main.rs"

[dependencies]
account-balances = { workspace = true }
alloy = { workspace = true, features = [
  "json-rpc",
  "provider-anvil-api",
  "provider-txpool-api",
  "rand",
  "rpc-types",
  "signer-aws",
  "sol-types"
] }
app-data = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
bad-tokens = { workspace = true }
balance-overrides = { workspace = true }
bigdecimal = { workspace = true }
bytes-hex = { workspace = true }  # may get marked as unused but it's used with serde
chain = { workspace = true }
chrono = { workspace = true, default-features = false, features = ["clock"] }
configs = { workspace = true }
const-hex = { workspace = true }
cow-amm = { workspace = true }
dashmap = { workspace = true }
derive_more = { workspace = true }
eth-domain-types = { workspace = true }
ethrpc = { workspace = true }
event-indexing = { workspace = true }
futures = { workspace = true }
gas-price-estimation = { workspace = true }
hex-literal = { workspace = true }
http-client = { workspace = true }
humantime = { workspace = true }
humantime-serde = { workspace = true }
itertools = { workspace = true }
liquidity-sources = { workspace = true }
mimalloc = { workspace = true, optional = true }
moka = { workspace = true, features = ["future"] }
num = { workspace = true }
number = { workspace = true }
price-estimation = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
request-sharing = { workspace = true }
reqwest = { workspace = true, features = ["query"] }
s3 = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde-ext = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
solvers-dto = { path = "../solvers-dto" }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
token-info = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
toml = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true, features = ["decompression-br", "limit", "trace"] }
url = { workspace = true, features = ["serde"] }

# These still use { workspace = true } because they're used at
# the boundary between driver and shared.

# TODO These either need to be removed or changed to be direct
# dependencies rather than workspace dependencies
anyhow = { workspace = true }
clap = { workspace = true }
contracts = { workspace = true }
model = { workspace = true }
observe = { workspace = true }
shared = { workspace = true }
signature-validator = { workspace = true }
solver = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
alloy = { workspace = true, features = ["signer-mnemonic"] }
app-data = { workspace = true, features = ["test_helpers"] }
contracts = { workspace = true }
ethrpc = { workspace = true, features = ["test-util"] }
maplit = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["process", "test-util"] }

[build-dependencies]
anyhow = { workspace = true }
vergen = { workspace = true, features = ["git", "gitcl"] }

[features]
mimalloc-allocator = ["dep:mimalloc"]
tokio-console = ["observe/tokio-console"]

[lints]
workspace = true
