[package]
name = "e2e"
version = "1.0.0"
authors = [
    "Gnosis Developers <developers@gnosis.io>",
    "Cow Protocol Developers <dev@cow.fi>",
]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { workspace = true, default-features = false, features = ["json-rpc", "providers", "provider-txpool-api", "rpc-client", "rpc-types", "transports", "reqwest", "signers", "signer-local", "signer-mnemonic", "provider-anvil-api", "provider-debug-api", "sol-types"] }
alloy-signer = {workspace = true, default-features = false, features = ["eip712"]}
anyhow = { workspace = true }
app-data = { workspace = true }
autopilot = { workspace = true, features = ["test-util"] }
axum = { workspace = true }
bigdecimal = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
const-hex = { workspace = true }
contracts = { workspace = true }
cow-amm = { workspace = true }
database = { workspace = true }
driver = { workspace = true }
ethrpc = { workspace = true, features = ["test-util"] }
futures = { workspace = true }
hex-literal = { workspace = true }
hyper = { workspace = true }
itertools = { workspace = true }
model = { workspace = true, features = ["e2e"] }
number = { workspace = true }
observe = { workspace = true }
orderbook = { workspace = true, features = ["e2e"] }
reqwest = { workspace = true, features = ["blocking"] }
serde_json = { workspace = true }
shared = { workspace = true }
solver = { workspace = true }
solvers = { workspace = true }
solvers-dto = { workspace = true }
sqlx = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "process"] }
toml = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[dev-dependencies]
refunder = { workspace = true }
rstest = { workspace = true }

[lints]
workspace = true
