[package]
name = "eth-domain-types"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-eips = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
derive_more = { workspace = true }
model = { workspace = true }
num = { workspace = true }
number = { workspace = true }
solvers-dto = { workspace = true }
