[package]
name = "ethrpc"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
name = "ethrpc"
path = "src/lib.rs"
doctest = false

[dependencies]
alloy = { workspace = true, default-features = false, features = ["json-rpc", "providers", "rpc-client", "transports"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
mockall = { workspace = true }
observe = { workspace = true }
primitive-types = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = [] }
tokio-stream = { workspace = true }
web3 = { workspace = true }
contracts = { workspace = true }
ethcontract = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
itertools = { workspace = true }
tower = { workspace = true }

[dev-dependencies]
maplit = { workspace = true }
testlib = { workspace = true }

[lints]
workspace = true
