[package]
name = "ethrpc"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
doctest = false
name = "ethrpc"
path = "src/lib.rs"

[dependencies]
alloy = { workspace = true, default-features = false, features = ["json-rpc", "providers", "rpc-client", "rpc-types", "rpc-types-trace", "transports", "transport-ws", "provider-ws", "provider-debug-api", "reqwest", "signers", "signer-aws", "signer-local", "eips", "reqwest-default-tls", "pubsub", "contract"] }
anyhow = { workspace = true }
async-trait = { workspace = true }
const-hex = { workspace = true }
ethcontract = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
jsonrpc-core.workspace = true
mockall = { workspace = true, optional = true }
observe = { workspace = true }
primitive-types = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }
web3 = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }

[features]
test-util = ["dep:mockall"]

[lints]
workspace = true
