[package]
name = "ethrpc"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "GPL-3.0-or-later"

[lib]
doctest = false
name = "ethrpc"
path = "src/lib.rs"

[dependencies]
alloy-consensus = { workspace = true }
alloy-contract = { workspace = true }
alloy-eips = { workspace = true }
alloy-json-rpc = { workspace = true }
alloy-network = { workspace = true }
alloy-primitives = { workspace = true }
alloy-provider = { workspace = true, features = ["ws"] }
alloy-rpc-client = { workspace = true, features = ["reqwest"] }
alloy-rpc-types = { workspace = true }
alloy-signer = { workspace = true }
alloy-transport = { workspace = true }
alloy-transport-ws = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
const-hex = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
observe = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["cookies"] }
scopeguard = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "rt-multi-thread"] }
tokio-stream = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
url = { workspace = true }

[features]
test-util = []

[lints]
workspace = true
